# Trip

./: .env.example  .gitignore  DEPLOY.md  README.md  package.json  pyproject.toml  tripshare.db
.github/workflows/: ci.yml
backend/: config.py  database.py  deps.py  main.py  models.py  schemas.py  security.py  worker.py
backend/routers/: __init__.py  auth.py  downloads.py  favorites.py  friends.py  groups.py  media.py  notifications.py
backend/services/: jobs.py  media_processing.py  rate_limit.py  storage_client.py
backend/tests/: conftest.py  test_auth.py  test_extras.py  test_friends.py  test_groups_and_permissions.py  test_media_pipeline.py
storage/: main.py
tripshare.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
web/public/: .htaccess
web/src/: App.css  App.jsx  api.js  styles.css
web/src/components/: Nav.jsx
web/src/components/ui/: button.jsx  dialog.jsx  input.jsx  select.jsx
web/src/contexts/: AuthContext.jsx  ThemeContext.jsx
web/src/pages/: AuthCallback.jsx  Dashboard.jsx  Friends.jsx  GroupDetail.jsx  Landing.jsx  Profile.jsx  PublicGallery.jsx
