[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tripshare"
version = "0.1.0"
description = "TripShare backend and storage services"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlalchemy>=2.0",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "email-validator>=2.2.0",
  "python-jose[cryptography]>=3.3",
  "passlib[bcrypt]>=1.7.4",
  "argon2-cffi>=23.1.0",
  "python-multipart>=0.0.12",
  "filetype>=1.2.0",
  "Pillow>=10.4.0",
  "httpx>=0.27.2",
  "bcrypt>=4.2.0",
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "psycopg2-binary>=2.9.9",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["backend*", "storage*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
